--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.0'
 
 services:
     db:
-        image: mysql:5.7
+        image: mariadb:10.4.8
         volumes:
             - database:/var/lib/mysql
             - ./config/eve_universe.sql:/docker-entrypoint-initdb.d/dump.sql
